Changed "ecom" button to "home", also added styling to products on store page.
Signed-off-by: SkyeShark <sdn5225@gmail.com>

--- a/store/templates/store/main.html
+++ b/store/templates/store/main.html
@@ -40,7 +40,7 @@
                 <a href="" class="brand-logo yellow-text text-darken-3 center" style="font-family:candara"><i class="material-icons">group_work</i>LUXE<i class="material-icons right">group_work</i></a>
                 <a href="" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons amber-text text-darken-1">menu</i></a>
                 <ul id="nav-mobile" class="right hide-on-med-and-down">
-                    <li><a href="{% url 'store' %}" class="tooltipped waves-effect waves-light amber-text text-darken-1" data-position="bottom" data-tooltip="Ecom"><i class="material-icons">monetization_on</i></a></li>
+                    <li><a href="{% url 'store' %}" class="tooltipped waves-effect waves-light amber-text text-darken-1" data-position="bottom" data-tooltip="Home"><i class="material-icons">home</i></a></li>
                     <li><a href="{% url 'store' %}" class="tooltipped waves-effect waves-light amber-text text-darken-1" data-position="bottom" data-tooltip="Store"><i class="material-icons">store</i></a></li>
                     <li><a href="{% url 'store' %}" class="tooltipped waves-effect waves-light amber-text text-darken-1" data-position="bottom" data-tooltip="Account"><i class="material-icons">account_box</i></a></li>
                     <li><a href="{% url 'cart' %}" class="tooltipped waves-effect waves-light amber-text text-darken-1" data-position="bottom" data-tooltip="View Cart"><i class="material-icons">shopping_cart</i></a></li>
@@ -50,7 +50,7 @@
         </nav>
     </div>
     <ul class="sidenav" id="mobile-demo">
-        <li><a href="{% url 'store' %}" class="waves-effect waves-light amber-text text-darken-1"><i class="material-icons">monetization_on</i>Ecom</a></li>
+        <li><a href="{% url 'store' %}" class="waves-effect waves-light amber-text text-darken-1"><i class="material-icons">home</i>Home</a></li>
         <li><a href="{% url 'store' %}" class="waves-effect waves-light amber-text text-darken-1" data-position="bottom" data-tooltip="Store"><i class="material-icons">store</i>Store</a></li>
         <li><a href="{% url 'store' %}" class="waves-effect waves-light amber-text text-darken-1" data-position="bottom" data-tooltip="Account"><i class="material-icons">account_box</i>Account</a></li>
         <li><a href="{% url 'cart' %}" class="waves-effect waves-light amber-text text-darken-1" data-position="bottom" data-tooltip="View Cart"><i class="material-icons">shopping_cart</i>Cart</a></li>
