--- a/store/templates/store/store.html
+++ b/store/templates/store/store.html
@@ -16,7 +16,7 @@
         {% for product in products %}
         <div class="card">
             <div class="card-image waves-effect waves-block waves-light">
-              <img class="activator" src="{% static 'images/placeholder.png' %}">
+              <img class="activator" src="{% static 'images/IMG_2.jpeg' %}">
             </div>
             <div class="card-content">
               <span class="card-title activator grey-text text-darken-4">{{product.name}}<i class="material-icons right">more_vert</i></span>
